<?xml version="1.0"?>

    <LinearLayout tools:context=".MainActivity" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:hint="@string/button_zero" android:background="#ffffff" android:id="@+id/displayResult"> </EditText>


    -<LinearLayout android:paddingTop="40dp" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_gravity="center">

    <Button android:layout_height="wrap_content" android:background="#046697"  android:layout_width="55dp" android:id="@+id/memMC" android:textStyle="bold" android:text="@string/Button_MC"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/memMS" android:textStyle="bold" android:text="@string/Button_MS" android:onClick="showhistory"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/memMR" android:gravity="top|center" android:textStyle="bold" android:text="@string/Button_MR"/>

    <Button android:layout_height="wrap_content" android:background="#046697"  android:layout_width="55dp" android:id="@+id/memMPlus" android:gravity="top|center" android:textStyle="bold" android:text="@string/Button_MPlus"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/memMMinus" android:textStyle="bold" android:text="@string/Button_MMinus"/>

</LinearLayout>


    -<LinearLayout android:paddingTop="20dp" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_gravity="center">

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/cancel" android:textStyle="bold" android:text="@string/button_cancel"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/CE" android:textStyle="bold" android:text="@string/Button_CE"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/backspace" android:textStyle="bold" android:text="@string/Button_Backspace"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/plusorminus" android:textStyle="bold" android:text="@string/plusorminus"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="65dp" android:id="@+id/sqroot" android:textStyle="bold" android:text="@string/Button_root"/>

</LinearLayout>


    -<LinearLayout android:paddingTop="20dp" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_gravity="center">

    <Button android:layout_height="wrap_content"  android:background="#046697" android:layout_width="55dp" android:id="@+id/numseven" android:textStyle="bold" android:text="@string/button_seven"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/numeight" android:textStyle="bold" android:text="@string/button_eight"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/numnine" android:textStyle="bold" android:text="@string/button_nine"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/divide" android:textStyle="bold" android:text="@string/Button_div"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/percentage" android:textStyle="bold" android:text="@string/Button_modulus"/>

</LinearLayout>


    -<LinearLayout android:paddingTop="20dp" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_gravity="center">

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/numfour" android:textStyle="bold" android:text="@string/Button_four"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/numfive" android:textStyle="bold" android:text="@string/Button_five"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/numsix" android:textStyle="bold" android:text="@string/Button_six"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/nummul" android:textStyle="bold" android:text="@string/Button_mul"/>

    <Button android:layout_height="wrap_content" android:background="#046697"  android:layout_width="55dp" android:id="@+id/onebyx" android:textStyle="bold" android:text="@string/onebyx"/>

</LinearLayout>


    -<LinearLayout android:paddingTop="20dp" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_gravity="center">

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/one" android:textStyle="bold" android:text="@string/Button_one"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/two" android:textStyle="bold" android:text="@string/Button_two"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/three" android:textStyle="bold" android:text="@string/Button_three"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/equal" android:textStyle="bold" android:text="@string/Button_equal"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/add" android:textStyle="bold" android:text="@string/Button_add"/>

</LinearLayout>


    -<LinearLayout android:paddingTop="20dp" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_gravity="center">

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/zero" android:textStyle="bold" android:text="@string/button_zero"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/button" android:textStyle="bold" android:text="@string/Button_button"/>

    <Button android:layout_height="wrap_content" android:background="#046697"  android:layout_width="55dp" android:id="@+id/sub" android:textStyle="bold" android:text="@string/Button_sub"/>

    <Button android:layout_height="wrap_content" android:background="#046697"  android:layout_width="55dp" android:id="@+id/openBracket" android:textStyle="bold" android:text="@string/Button_openBracket"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/closeBracket" android:textStyle="bold" android:text="@string/Button_closeBracket"/>

</LinearLayout>


    -<LinearLayout android:paddingTop="20dp" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_gravity="center">

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/factorial" android:textStyle="bold" android:text="@string/factorial"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/xpowery" android:textStyle="bold" android:text="@string/xpowery"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/square" android:textStyle="bold" android:text="@string/Button_square"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/yrootx" android:textStyle="bold" android:text="@string/yrootx"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/xcube" android:textStyle="bold" android:text="@string/xcube"/>

</LinearLayout>


    -<LinearLayout android:paddingTop="20dp" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_gravity="center">

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/cuberootofx" android:textStyle="bold" android:text="@string/cuberootofx"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/log" android:textStyle="bold" android:text="@string/log"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/tenpowerx" android:textStyle="bold" android:text="@string/tenpowerx"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/pi" android:textStyle="bold" android:text="@string/pi"/>

    <Button android:layout_height="wrap_content" android:background="#046697" android:layout_width="55dp" android:id="@+id/mod" android:textStyle="bold" android:text="@string/mod"/>

</LinearLayout>

</LinearLayout>
